--- a/templates/base.html
+++ b/templates/base.html
@@ -3,60 +3,37 @@
 <html>
 
 <head>
-  <style type="text/css">
-    .sidenav {
-      height: 100%;
-      width: 160px;
-      position: fixed;
-      z-index: 1;
-      top: 0;
-      left: 0;
-      background-color: #111;
-      overflow-x: hidden;
-      padding-top: 20px;
-    }
-
-    .sidenav a {
-      padding: 6px 8px 6px 16px;
-      text-decoration: none;
-      font-size: 25px;
-      color: #818181;
-      display: block;
-    }
-
-    .sidenav a:hover {
-      color: #f1f1f1;
-    }
-
-    .main {
-      margin-left: 160px;
-      padding: 0px 10px;
-    }
-  </style>
-  <meta charset="utf-8">
-  <title>{% block title %}Django Auth Tutorial{% endblock %}</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="/static/styles.css">
 </head>
 
 <body>
   <main>
+    <!-- Side navigation -->
     <div class="sidenav">
-      <a href="/">Home</a>
+      <nav_bar>
+        <it><a href="/">Home</a></it>
+        <it><a href="/monthly_calendar/">Monthly Calender</a></it>
+        <it><a href="#">Weekly Calendar</a></it>
+        <it><a href="/">Log Out</a></it>
+      </nav_bar>
     </div>
-   
+
+
     <div id="content" name="content" class="main">
       <div class="row justify-content-center">
         <div class="col-8">
-          <h1 class="mt-2">Website Design</h1>
+          <h1 class="mt-2">Schedule It!</h1>
           <hr class="mt-0 mb-4">
           {% block content %}
           {% endblock %}
         </div>
       </div>
     </div>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
       crossorigin="anonymous"></script>
