--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -9,7 +9,7 @@
   <button type="submit">Log In</button>
 </form>
 &nbsp;
-<form action="http://127.0.0.1:8000/register/">
+<form action="/register/">
   <button type="register">Register</button>
 </form>
 
