--- a/templates/register.html
+++ b/templates/register.html
@@ -27,7 +27,7 @@
                     <form method="POST" class="form-group">
                         {% csrf_token %}
                         {{ form|crispy }}
-                        <button type="submit" class="btn btn-success" onclick="register()">Register</button>
+                        <button type="submit" class="btn btn-success">Register</button>
                     </form>
                     <script type="text/JavaScript">
                 function showMessage(){
