--- a/templates/monthly.html
+++ b/templates/monthly.html
@@ -24,8 +24,8 @@
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 
 <div class="clearfix">
-  <a class="btn btn-info left" href="{'% url 'cal:calendar' %}?{'{ prev_month }}"> Previous Month </a>
-  <a class="btn btn-info right" href="{'% url 'cal:calendar' %}?{'{ next_month }}"> Next Month </a>
+  <a class="btn btn-info left" href="{% url 'calendar' %}?{{ prev_month }}"> Previous Month </a>
+  <a class="btn btn-info right" href="{% url 'calendar' %}?{{ next_month }} "> Next Month </a>
 </div>
 
   {% block script %}
