Display all tasks

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,4 +4,5 @@
 {% block content %}
 <title>My Profile</title>
 <h2 class="title">{% block title %}My Profile{% endblock %}</h2>
+<a href="{% url 'view_event' %}">view</a>
 {% endblock %}
