--- a/templates/view_event.html
+++ b/templates/view_event.html
@@ -7,6 +7,10 @@
     <h1>Title: <h2>{{ ins.title }}</h2></h1>
     <p>Description: {{ ins.description }}</p>
     <p>Due Date: {{ ins.end_time }}</p>
+    <form action="{% url 'event_delete' ins.id %}" method="POST">
+    	{% csrf_token %}
+    	<input type="submit" value="Delete Task">
+    </form>
     <br>
 {% endfor %}
 
