--- a/templates/monthly.html
+++ b/templates/monthly.html
@@ -22,7 +22,13 @@
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<iframe src="{% url 'view_event' %}" title="View Tasks"></iframe> 
+<!-- <iframe src="{% url 'view_event' %}" title="View Tasks"></iframe>  -->
+{% for ins in instance %}
+    <h1>Title: <h2>{{ ins.title }}</h2></h1>
+    <p>Description: {{ ins.description }}</p>
+    <p>Due Date: {{ ins.end_time }}</p>
+    <br>
+{% endfor %}
 <div class="clearfix">
   <a class="btn btn-info left" href="{% url 'calendar' %}?{{ prev_month }}"> Previous Month </a>
   <a class="btn btn-info right" href="{% url 'calendar' %}?{{ next_month }} "> Next Month </a>
