--- a/templates/view_event.html
+++ b/templates/view_event.html
@@ -9,7 +9,7 @@
     <p>Due Date: {{ ins.end_time }}</p>
     <form action="{% url 'event_delete' ins.id %}" method="POST">
     	{% csrf_token %}
-    	<input type="submit" value="Delete Task">
+    	<input class="btn btn-outline-danger btn-sm"  type="submit" value="Delete Task">
     </form>
     <br>
 {% endfor %}
