add complete button
can mark tasks as completed or not

--- a/templates/view_event.html
+++ b/templates/view_event.html
@@ -7,6 +7,7 @@
     <h1>Title: <h2>{{ ins.title }}</h2></h1>
     <p>Description: {{ ins.description }}</p>
     <p>Due Date: {{ ins.end_time }}</p>
+    <p>Due Date: {{ ins.completed }}</p>
     <br>
 {% endfor %}
 
