--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="/static/styles.css">
+  <title>
+    {% block title %}Schedule It!{% endblock %}
+  </title>
 </head>
 
 <body>
@@ -17,7 +20,7 @@
     <div class="sidenav">
       <nav_bar>
         <it><a href="/">Home</a></it>
-        <it><a href="/monthly_calendar/">Monthly Calender</a></it>
+        <it><a href="/monthly_calendar/">Monthly Calendar</a></it>
         <it><a href="/weekly_calendar/">Weekly Calendar</a></it>
         <it><a href="/event/">Add Tasks</a></it>
         <it><a href="/profile/">Profile</a></it>
