--- a/templates/event.html
+++ b/templates/event.html
@@ -4,7 +4,7 @@
 {% block content %}
 <title>Add Task</title>
 
-<h2 class="title">{% block title %}Add Task:{% endblock %}</h2>
+<h2 class="title">{% block title %}Add Task{% endblock %}</h2>
 <form method="post" class="addtask_form">
   {% csrf_token %} 
   <table class="form form-table">
