--- a/templates/monthly.html
+++ b/templates/monthly.html
@@ -15,18 +15,30 @@
     crossorigin="anonymous">
 -->
 
-  <title>Django Calendar App</title>
-
-  <h1 class="title">{% block title %}Django Calendar App{% endblock %}</h1>
-  <hr>
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<!-- <iframe src="{% url 'view_event' %}" title="View Tasks"></iframe>  -->
+
 {% for ins in instance %}
     <h1>Title: <h2>{{ ins.title }}</h2></h1>
     <p>Description: {{ ins.description }}</p>
     <p>Due Date: {{ ins.end_time }}</p>
+    <div class="row justify-content-start">
+      <div class="col-4">
+          <form action="{% url 'event_complete' ins.id %}" method="POST">
+              {% csrf_token %}
+              <!-- <input class="form-check-input" type="checkbox" onChange="this.form.submit()" value="Complete Task"> -->
+              <input class="btn btn-outline-success btn-sm" type="submit" value="Complete Task">
+      
+          </form>
+      </div>
+      <div class="col-4">
+          <form action="{% url 'event_delete' ins.id %}" method="POST">
+              {% csrf_token %}
+              <input class="btn btn-outline-danger btn-sm" type="submit" value="Delete Task">
+          </form>
+      </div>
+  </div>
     <br>
 {% endfor %}
 <div class="clearfix">
