Format and CSS Tasks on Monthly Page

--- a/templates/monthly.html
+++ b/templates/monthly.html
@@ -17,25 +17,27 @@
 
   <title>Django Calendar App</title>
 
-  <h1 class="title">{% block title %}Django Calendar App{% endblock %}</h1>
-  <hr>
-
+  <!--  <h1 class="title">{% block title %}Django Calendar App{% endblock %}</h1> <hr> -->
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
 <div class="row">
-  <div class="col-3">
-    {% for ins in instance %}
-      <h1>Title: <h2>{{ ins.title }}</h2></h1>
-      <p>Description: {{ ins.description }}</p>
-      <p>Due Date: {{ ins.end_time }}</p>
-      <form action="{% url 'event_delete' ins.id %}" method="POST">
-        {% csrf_token %}
-        <input class="btn btn-outline-danger btn-sm" type="submit" value="Delete Task">
-      </form>
-      <br>
-    {% endfor %}
+  <div class="col-3 mt-5">
+    <h3 class="text-center text-white-50 mb-0" style="background: #17a2b8;">My Tasks</h3>
+    <div class="overflow-auto bg-light p-3" style="height: 58%;">
+      {% for ins in instance %}
+        <h4>Title: {{ ins.title }}</h4>
+        <p>Description: {{ ins.description }}</p>
+        <p>Due Date: {{ ins.end_time }}</p>
+        <form action="{% url 'event_delete' ins.id %}" method="POST">
+          {% csrf_token %}
+          <input class="btn btn-outline-danger btn-sm" type="submit" value="Delete Task">
+        </form>
+        <br>
+      {% endfor %}
+    </div>
   </div>
-  <div class ="col-9">
+  <div class ="col-9 mt-n4">
     <div class="clearfix">
       <a class="btn btn-info left" href="{% url 'calendar' %}?{{ prev_month }}"> Previous Month </a>
       <a class="btn btn-info right" href="{% url 'calendar' %}?{{ next_month }} "> Next Month </a>
