--- a/templates/monthly.html
+++ b/templates/monthly.html
@@ -22,22 +22,23 @@
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 
 <div class="row">
-  <div class="col-3 mt-5">
+  <div class="col-4 mt-5">
     <h3 class="text-center text-white-50 mb-0" style="background: #17a2b8;">My Tasks</h3>
-    <div class="overflow-auto bg-light p-3" style="height: 58%;">
+    <div class="overflow-auto bg-light p-3" style="height: 58rem;">
       {% for ins in instance %}
-        <h4>Title: {{ ins.title }}</h4>
-        <p>Description: {{ ins.description }}</p>
-        <p>Due Date: {{ ins.end_time }}</p>
+        <h4>Title: <span>{{ ins.title }}</span></h4>
+        <h4>Description: <span>{{ ins.description }}</span></h4>
+        <h5>Due Date: <span>{{ ins.end_time }}</span></h5>
+        <p>Due Date: {{ ins.completed }}</p>
         <form action="{% url 'event_delete' ins.id %}" method="POST">
           {% csrf_token %}
           <input class="btn btn-outline-danger btn-sm" type="submit" value="Delete Task">
         </form>
-        <br>
+        <hr>
       {% endfor %}
     </div>
   </div>
-  <div class ="col-9 mt-n4">
+  <div class ="col-8 mt-n4">
     <div class="clearfix">
       <a class="btn btn-info left" href="{% url 'calendar' %}?{{ prev_month }}"> Previous Month </a>
       <a class="btn btn-info right" href="{% url 'calendar' %}?{{ next_month }} "> Next Month </a>
