--- a/templates/monthly.html
+++ b/templates/monthly.html
@@ -26,15 +26,17 @@
     <h3 class="text-center text-white-50 mb-0" style="background: #17a2b8;">My Tasks</h3>
     <div class="overflow-auto bg-light p-3" style="height: 58rem;">
       {% for ins in instance %}
-        <h4>Title: <span>{{ ins.title }}</span></h4>
-        <h4>Description: <span>{{ ins.description }}</span></h4>
-        <h5>Due Date: <span>{{ ins.end_time }}</span></h5>
-        <p>Due Date: {{ ins.completed }}</p>
-        <form action="{% url 'event_delete' ins.id %}" method="POST">
-          {% csrf_token %}
-          <input class="btn btn-outline-danger btn-sm" type="submit" value="Delete Task">
-        </form>
-        <hr>
+        {% if ins.completed is False %}
+          <h4>Title: <span>{{ ins.title }}</span></h4>
+          <h4>Description: <span>{{ ins.description }}</span></h4>
+          <h5>Due Date: <span>{{ ins.end_time }}</span></h5>
+          <p>Due Date: {{ ins.completed }}</p>
+          <form action="{% url 'event_delete' ins.id %}" method="POST">
+            {% csrf_token %}
+            <input class="btn btn-outline-danger btn-sm" type="submit" value="Delete Task">
+          </form>
+          <hr>
+        {% endif %}
       {% endfor %}
     </div>
   </div>
