--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,24 @@
   Hi {{ user.username }}!
   You have successfully logged in!
   <a href="{% url 'logout' %}">Logout</a>
+
+<style>
+  /* CSS for calendar */
+  .calendar td {
+      width: 200px;
+      height: 300px;
+      padding: 20px 0px 0px 5px;
+      border: 1px solid black;
+      text-align: center;
+  }
+</style>
+
+
+{% block script %}
+{{calendar_week}}
+{% endblock %}
 {% else %}
+
   <p>You are not logged in</p>
   <a href="{% url 'login' %}">Log In</a>
 {% endif %}
