--- a/templates/monthly.html
+++ b/templates/monthly.html
@@ -31,15 +31,21 @@
           <h4>Title: <span>{{ ins.title }}</span></h4>
           <h4>Description: <span>{{ ins.description }}</span></h4>
           <h5>Due Date: <span>{{ ins.end_time }}</span></h5>
-          <form action="{% url 'event_complete' ins.id %}" method="POST">
-              {% csrf_token %}
-              <!-- <input class="form-check-input" type="checkbox" onChange="this.form.submit()" value="Complete Task"> -->
-              <input class="btn btn-outline-success btn-sm" type="submit" value="Complete Task">
-          </form>
-          <form action="{% url 'event_delete' ins.id %}" method="POST">
-            {% csrf_token %}
-            <input class="btn btn-outline-danger btn-sm" type="submit" value="Delete Task">
-          </form>
+          <div class="row">
+            <div class="col">
+              <form action="{% url 'event_complete' ins.id %}" method="POST">
+                  {% csrf_token %}
+                  <!-- <input class="form-check-input" type="checkbox" onChange="this.form.submit()" value="Complete Task"> -->
+                  <input class="btn btn-outline-success btn-sm" type="submit" value="Complete Task">
+              </form>
+            </div>
+            <div class="col">
+              <form action="{% url 'event_delete' ins.id %}" method="POST">
+                {% csrf_token %}
+                <input class="btn btn-outline-danger btn-sm" type="submit" value="Delete Task">
+              </form>
+            </div>
+          </div>
           <hr>
         {% endif %}
       {% endfor %}
