--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,5 +2,6 @@
 {% load static %}
 {% block title %}My Profile{% endblock %}
 {% block content %}
+<h2 class="title">My Profile</h2>
 <a href="{% url 'view_event' %}">view</a>
 {% endblock %}
