--- a/templates/view_event.html
+++ b/templates/view_event.html
@@ -92,13 +92,25 @@
 </div>
 
 <!-- Pie Chart -->
-  <div id="container" style="width: 75%;">
-    <canvas id="pie-chart"></canvas>
-  </div>
+<br>
+<hr>
+<br>
+<h2 class="title">My Statistics</h2>
+<br>
+	<div class="row">
+	  <div class="col-8" >
+		<div id="container-fluid" style="height: 400px; width: 100%;">
+		  <canvas id="pie-chart"></canvas>
+		</div>
+	  </div>
+	  <div class="col-2" style="width: 75%;">	
+		<p>More Stats</p>
+		</div>
+	  </div>
+	</div>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
   <script>
-
     var config = {
       type: 'pie',
       data: {
@@ -118,7 +130,6 @@
       var ctx = document.getElementById('pie-chart').getContext('2d');
       window.myPie = new Chart(ctx, config);
     };
-
   </script>
 
 {% endblock %}
