Show tasks on weekly

--- a/templates/view_event.html
+++ b/templates/view_event.html
@@ -104,8 +104,9 @@
 		</div>
 	  </div>
 	  <div class="col-2" style="width: 75%;">	
-		<p>More Stats</p>
-		</div>
+		<h4>Total Tasks:</h4>
+		<h4>Completed Tasks:</h4>
+	  </div>
 	  </div>
 	</div>
 
