--- a/templates/weekly.html
+++ b/templates/weekly.html
@@ -6,14 +6,6 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-
-<!-- 
-<h1 class="title">{% block title %}Django Calendar App{% endblock %}</h1>
-<hr>  -->
-
-<hr>
-
-
 <style>
     /* CSS for calendar */
     .calendar td {
@@ -34,4 +26,33 @@
 {{calendar_week}}
 {% endblock %}
 
+
+  <div class="col">
+    <h3 class="text-center text-white-50 mb-0" style="background: #17a2b8;">My Tasks</h3>
+    <div class="overflow-auto bg-light p-3" style="height: 58rem;">
+      {% for ins in instance %}
+        {% if ins.completed is False %}
+          <h4>Title: <span>{{ ins.title }}</span></h4>
+          <h4>Description: <span>{{ ins.description }}</span></h4>
+          <h5>Due Date: <span>{{ ins.end_time }}</span></h5>
+          <div class="row">
+            <div class="col">
+              <form action="{% url 'event_complete' ins.id %}" method="POST">
+                  {% csrf_token %}
+                  <!-- <input class="form-check-input" type="checkbox" onChange="this.form.submit()" value="Complete Task"> -->
+                  <input class="btn btn-outline-success btn-sm" type="submit" value="Complete Task">
+              </form>
+            </div>
+            <div class="col">
+              <form action="{% url 'event_delete' ins.id %}" method="POST">
+                {% csrf_token %}
+                <input class="btn btn-outline-danger btn-sm" type="submit" value="Delete Task">
+              </form>
+            </div>
+          </div>
+          <hr>
+        {% endif %}
+      {% endfor %}
+    </div>
+  </div>
 {% endblock %}
