--- a/templates/view_event.html
+++ b/templates/view_event.html
@@ -13,22 +13,24 @@
 	  <div class="overflow-auto p-2" style="height: 450px;">
 	      {% for ins in instance %}
 	      	{% if ins.completed is False and not ins.is_past_due %}
-		        <h4>Title: {{ ins.title }}</h4>
-		        <p>Description: {{ ins.description }}</p>
-		        <p>Due Date: {{ ins.end_time }}</p>
-      
-            <form action="{% url 'event_complete' ins.id %}" method="POST">
-                {% csrf_token %}
-                <!-- <input class="form-check-input" type="checkbox" onChange="this.form.submit()" value="Complete Task"> -->
-                <input class="btn btn-outline-success btn-sm" type="submit" value="Complete Task">
-        
-            </form>
-      
-		        <form action="{% url 'event_delete' ins.id %}" method="POST">
-		          {% csrf_token %}
-		          <input class="btn btn-outline-danger btn-sm" type="submit" value="Delete Task">
-		        </form>
-		        <hr>
+		      <h4>Title: {{ ins.title }}</h4>
+		      <p>Description: {{ ins.description }}</p>
+		      <p>Due Date: {{ ins.end_time }}</p>
+	          <div class="row">
+	            <div class="col">
+	              <form action="{% url 'event_complete' ins.id %}" method="POST">
+	                {% csrf_token %}
+	                <input class="btn btn-outline-success btn-sm" type="submit" value="Complete Task">
+	              </form>
+	            </div>
+	            <div class="col">
+	              <form action="{% url 'event_delete' ins.id %}" method="POST">
+	                {% csrf_token %}
+	                <input class="btn btn-outline-danger btn-sm" type="submit" value="Delete Task">
+	              </form>
+	            </div>
+	          </div>
+		      <hr>
 		    {% endif %}
 	      {% endfor %}
   	 </div>
@@ -38,14 +40,24 @@
   	 <div class="overflow-auto p-2" style="height: 450px;">
 	  	{% for ins in instance %}
 	      	{% if ins.completed is True %}
-		        <h4>Title: {{ ins.title }}</h4>
-		        <p>Description: {{ ins.description }}</p>
-		        <p>Due Date: {{ ins.end_time }}</p>
-		        <form action="{% url 'event_delete' ins.id %}" method="POST">
-		          {% csrf_token %}
-		          <input class="btn btn-outline-danger btn-sm" type="submit" value="Delete Task">
-		        </form>
-		        <hr>
+		      <h4>Title: {{ ins.title }}</h4>
+		      <p>Description: {{ ins.description }}</p>
+		      <p>Due Date: {{ ins.end_time }}</p>
+	          <div class="row">
+	            <div class="col">
+	              <form action="{% url 'event_complete' ins.id %}" method="POST">
+	                {% csrf_token %}
+	                <input class="btn btn-outline-success btn-sm" type="submit" value="Complete Task">
+	              </form>
+	            </div>
+	            <div class="col">
+	              <form action="{% url 'event_delete' ins.id %}" method="POST">
+	                {% csrf_token %}
+	                <input class="btn btn-outline-danger btn-sm" type="submit" value="Delete Task">
+	              </form>
+	            </div>
+	          </div>
+		      <hr>
 		    {% endif %}
 	      {% endfor %}
      </div>
@@ -55,25 +67,70 @@
   	 <div class="overflow-auto p-2" style="height: 450px;">
 	  	{% for ins in instance %}
 	      	{% if ins.completed is False and ins.is_past_due %}
-		        <h4>Title: {{ ins.title }}</h4>
-		        <p>Description: {{ ins.description }}</p>
-		        <p>Due Date: {{ ins.end_time }}</p>
-		        <form action="{% url 'event_delete' ins.id %}" method="POST">
-		          {% csrf_token %}
-		          <input class="btn btn-outline-danger btn-sm" type="submit" value="Delete Task">
-		        </form>
-		        <hr>
+		      <h4>Title: {{ ins.title }}</h4>
+		      <p>Description: {{ ins.description }}</p>
+		      <p>Due Date: {{ ins.end_time }}</p>
+	          <div class="row">
+	            <div class="col">
+	              <form action="{% url 'event_complete' ins.id %}" method="POST">
+	                {% csrf_token %}
+	                <input class="btn btn-outline-success btn-sm" type="submit" value="Complete Task">
+	              </form>
+	            </div>
+	            <div class="col">
+	              <form action="{% url 'event_delete' ins.id %}" method="POST">
+	                {% csrf_token %}
+	                <input class="btn btn-outline-danger btn-sm" type="submit" value="Delete Task">
+	              </form>
+	            </div>
+	          </div>
+		      <hr>
 		    {% endif %}
 	      {% endfor %}
      </div>
   </div>
-
-
-  
 </div>
 
-	
-	
-  
+<!-- Pie Chart -->
+<br>
+<hr>
+<br>
+<h2 class="title">My Statistics</h2>
+<br>
+	<div class="row">
+	  <div class="col-8" >
+		<div id="container-fluid" style="height: 400px; width: 100%;">
+		  <canvas id="pie-chart"></canvas>
+		</div>
+	  </div>
+	  <div class="col-2" style="width: 75%;">	
+		<h4>Total Tasks:</h4>
+		<h4>Completed Tasks:</h4>
+	  </div>
+	  </div>
+	</div>
+
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+  <script>
+    var config = {
+      type: 'pie',
+      data: {
+        datasets: [{
+          data: {{ data|safe }},
+          backgroundColor: ['yellow', 'green', 'red'],
+          label: 'Progress'
+        }],
+        labels: {{ labels|safe }}
+      },
+      options: {
+        responsive: true
+      }
+    };
+
+    window.onload = function() {
+      var ctx = document.getElementById('pie-chart').getContext('2d');
+      window.myPie = new Chart(ctx, config);
+    };
+  </script>
 
 {% endblock %}
