--- a/templates/view_event.html
+++ b/templates/view_event.html
@@ -104,8 +104,9 @@
 		</div>
 	  </div>
 	  <div class="col-2" style="width: 75%;">	
-		<h4>Total Tasks:</h4>
-		<h4>Completed Tasks:</h4>
+		<h4>Total Number of Tasks: {{ total }} </h4>
+		<h4>Completed Tasks: {{ cd }} </h4>
+		<h4>In Progress: {{ in_prog }}</h4>
 	  </div>
 	  </div>
 	</div>
