allow past due to show

--- a/templates/view_event.html
+++ b/templates/view_event.html
@@ -107,6 +107,7 @@
 		<h4>Total Number of Tasks: {{ total }} </h4>
 		<h4>Completed Tasks: {{ cd }} </h4>
 		<h4>In Progress: {{ in_prog }}</h4>
+		<h4>Past Due: {{ pd  }}</h4>
 	  </div>
 	  </div>
 	</div>
