--- a/templates/view_event.html
+++ b/templates/view_event.html
@@ -111,7 +111,7 @@
 	</div>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
-  <script>
+  <script type="text/JavaScript">
     var config = {
       type: 'pie',
       data: {
