--- a/templates/home.html
+++ b/templates/home.html
@@ -5,11 +5,13 @@
 
 
 {% block content %}
+<p id="msg1">
 {% if user.is_authenticated %}
 Hi {{ user.username }}!
 You have successfully logged in!
+</p>
 
-
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" type="text/javascript"></script> -->
 
 {% if messages %}
 {% for message in messages %}
@@ -25,10 +27,10 @@ You have successfully logged in!
           $('#msg').remove();
       }
   }, 10000)
+  //$('#msg1').delay(2000).fadeOut(600).hide(1);
 </script>
 
-
-<a href="{% url 'logout' %}">Logout</a>
+<!-- <a href="{% url 'logout' %}">Logout</a> -->
 
 <style>
   /* CSS for calendar */
@@ -41,12 +43,13 @@ You have successfully logged in!
   }
 </style>
 
-
-
-{% block script %}
-<div class="row">
+<div>
+  {% block script %}
   {{calendar_week}}
+  {% endblock %}
 </div>
+
+
 <div class="col">
   <h3 class="text-center text-white-50 mb-0" style="background: #17a2b8;">My Tasks</h3>
   <div class="overflow-auto bg-light p-3" style="height: 18rem;">
@@ -59,7 +62,6 @@ You have successfully logged in!
       <div class="col">
         <form action="{% url 'event_complete' ins.id %}" method="POST">
           {% csrf_token %}
-          <!-- <input class="form-check-input" type="checkbox" onChange="this.form.submit()" value="Complete Task"> -->
           <input class="btn btn-outline-success btn-sm" type="submit" value="Complete Task">
         </form>
       </div>
@@ -75,12 +77,12 @@ You have successfully logged in!
     {% endfor %}
   </div>
 </div>
-{% endblock %}
+<hr>
+
 {% else %}
 
 <p>You are not logged in</p>
 <a href="{% url 'login' %}">Log In</a>
 {% endif %}
-
 
 {% endblock %}
